<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MasukActivity"
    android:backgroundTint="@color/white">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/gambar1"
        android:contentDescription="@string/caldera_mobile"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/masuk_round"
        />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/kembali"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:id="@+id/masuk_button_kembali"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@+id/masuk_round"
        android:id="@+id/masuk_ly_logo"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/gambar2"
            android:id="@+id/masuk_logo"
            />
        <TextView
            android:id="@+id/main_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/caldera_mobile"
            android:fontFamily="@font/poppinssemibold"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:lineSpacingMultiplier="0.9"
            android:maxLines="2"
            android:contentDescription="@string/caldera_mobile"
            android:importantForAccessibility="yes"
            tools:text="Caldera\nMobile"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_below="@id/masuk_ly_logo"
        android:id="@+id/masuk_ly_inputmasuk"
        >
        <EditText
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:hint="@string/nomor"
            android:fontFamily="@font/poppinsregular"
            android:textColor="@color/graySecondary"
            android:textSize="16sp"
            android:background="@drawable/background_outline"
            android:autofillHints="nik"
            android:inputType="text"
            android:id="@+id/masuk_nik"
            />

        <EditText
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:hint="@string/sandi"
            android:fontFamily="@font/poppinsregular"
            android:textColor="@color/graySecondary"
            android:textSize="16sp"
            android:background="@drawable/background_outline"
            android:autofillHints="sandi"
            android:inputType="text"
            android:id="@+id/masuk_sandi"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/belum"
        android:fontFamily="@font/poppinsregular"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_below="@+id/masuk_ly_inputmasuk"
        android:id="@+id/masuk_text_belum"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/daftar"
        android:fontFamily="@font/poppinsregular"
        android:textColor="@color/purplePrimary"
        android:textSize="16sp"
        android:layout_below="@+id/masuk_text_belum"
        android:id="@+id/masuk_daftarakun"
        />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/masuk"
        android:fontFamily="@font/poppinssemibold"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:background="@drawable/button_shape"
        android:layout_below="@id/masuk_daftarakun"
        android:id="@+id/masuk_button_masuk"
        />
</RelativeLayout>