<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".activity_inputdgr">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/gambar1"
        android:contentDescription="@string/caldera_mobile"
        android:id="@+id/inputdgr_round"
        />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_logout"
        android:contentDescription="@string/keluar"
        android:layout_marginStart="230dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/inputdgr_round"
        android:id="@+id/input_button_logout"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/dgr"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:layout_below="@+id/inputdgr_round"
        android:id="@+id/inputdgr_title_dgr"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="5dp"
        android:text="@string/pengecekan"
        android:fontFamily="@font/poppinsregular"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_below="@+id/inputdgr_title_dgr"
        android:id="@+id/inputdgr_title_waktu"
        />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_below="@+id/inputdgr_title_waktu"
        android:id="@+id/inputdgr_ly_waktu"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:hint="@string/waktu"
            android:background="@drawable/background_outline"
            android:fontFamily="@font/poppinsregular"
            android:textSize="14sp"
            android:autofillHints="waktu"
            android:inputType="text"
            android:id="@+id/inputdgr_waktu"
            />

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/bio"
        android:fontFamily="@font/poppinssemibold"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:layout_below="@id/inputdgr_ly_waktu"
        android:id="@+id/inputdgr_txt_bio"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_below="@+id/inputdgr_txt_bio"
        android:id="@+id/inputdgr_ly_bio"
        >
        <EditText
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:textAlignment="center"
            android:hint="@string/nilaiph"
            android:background="@drawable/background_outline"
            android:fontFamily="@font/poppinsregular"
            android:textSize="14sp"
            android:autofillHints="nilaiph"
            android:inputType="number"
            android:id="@+id/inputdgr_bioph"
            />

        <EditText
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:textAlignment="center"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:hint="@string/nilaitemp"
            android:background="@drawable/background_outline"
            android:fontFamily="@font/poppinsregular"
            android:textSize="14sp"
            android:autofillHints="nilaitemp"
            android:inputType="number"
            android:id="@+id/inputdgr_biosuhu"
            />

        <EditText
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:textAlignment="center"
            android:hint="@string/masukan"
            android:background="@drawable/background_outline"
            android:fontFamily="@font/poppinsregular"
            android:textSize="14sp"
            android:autofillHints="masukan"
            android:inputType="number"
            android:id="@+id/inputdgr_biomasukan"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/water"
        android:fontFamily="@font/poppinssemibold"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:layout_below="@id/inputdgr_ly_bio"
        android:id="@+id/inputdgr_txt_water"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_below="@+id/inputdgr_txt_water"
        android:id="@+id/inputdgr_ly_water"
        >
        <EditText
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:textAlignment="center"
            android:hint="@string/nilaiph"
            android:background="@drawable/background_outline"
            android:fontFamily="@font/poppinsregular"
            android:textSize="14sp"
            android:autofillHints="nilaiph"
            android:inputType="number"
            android:id="@+id/inputdgr_waterph"
            />

        <EditText
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:textAlignment="center"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:hint="@string/nilaitemp"
            android:background="@drawable/background_outline"
            android:fontFamily="@font/poppinsregular"
            android:textSize="14sp"
            android:autofillHints="nilaitemp"
            android:inputType="number"
            android:id="@+id/inputdgr_watersuhu"
            />

        <EditText
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:textAlignment="center"
            android:hint="@string/masukan"
            android:background="@drawable/background_outline"
            android:fontFamily="@font/poppinsregular"
            android:textSize="14sp"
            android:autofillHints="masukan"
            android:inputType="number"
            android:id="@+id/inputdgr_watermasukan"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/acid"
        android:fontFamily="@font/poppinssemibold"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:layout_below="@id/inputdgr_ly_water"
        android:id="@+id/inputdgr_txt_acid"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_below="@+id/inputdgr_txt_acid"
        android:id="@+id/inputdgr_ly_acid"
        >
        <EditText
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:textAlignment="center"
            android:hint="@string/nilaiph"
            android:background="@drawable/background_outline"
            android:fontFamily="@font/poppinsregular"
            android:textSize="14sp"
            android:autofillHints="nilaiph"
            android:inputType="number"
            android:id="@+id/inputdgr_acidph"
            />

        <EditText
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:textAlignment="center"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:hint="@string/nilaitemp"
            android:background="@drawable/background_outline"
            android:fontFamily="@font/poppinsregular"
            android:textSize="14sp"
            android:autofillHints="nilaitemp"
            android:inputType="number"
            android:id="@+id/inputdgr_acidsuhu"
            />

        <EditText
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:textAlignment="center"
            android:hint="@string/masukan"
            android:background="@drawable/background_outline"
            android:fontFamily="@font/poppinsregular"
            android:textSize="14sp"
            android:autofillHints="masukan"
            android:inputType="number"
            android:id="@+id/inputdgr_acidmasukan"
            />
    </LinearLayout>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/simpan"
        android:fontFamily="@font/poppinssemibold"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:background="@drawable/button_shape"
        android:layout_below="@id/inputdgr_ly_acid"
        android:id="@+id/inputdgr_button_simpan"
        />
</RelativeLayout>